--- a/package.json
+++ b/package.json
@@ -11,6 +11,15 @@
   "dependencies": {
     "cors": "^2.8.0",
     "express": "^4.14.0",
+    "lodash": "^4.15.0",
+    "lokijs": "^1.4.1",
     "node-fetch": "^1.6.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.4.0",
+    "eslint-config-airbnb": "^10.0.1",
+    "eslint-plugin-import": "^1.14.0",
+    "eslint-plugin-jsx-a11y": "^2.2.1",
+    "eslint-plugin-react": "^6.2.0"
   }
 }
