--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.14.0",
     "lodash": "^4.15.0",
     "lokijs": "^1.4.1",
-    "node-fetch": "^1.6.0"
+    "node-fetch": "^1.6.0",
+    "query-string": "^4.2.3"
   },
   "devDependencies": {
     "eslint": "^3.4.0",
